--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
     "extends": [
       "airbnb-base",
       "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "puglin:prettier/recommended"
+      "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
